# libmml

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: V1.m4a  b.txt  c.txt  ffmpeg_cut.sh
doc/: An ffmpeg and SDL Tutorial.md
src/: libmml-frame.c  libmml-internal.h  libmml.c  libmml.h
test/: test_frames_in_video.c  test_mml_audio_extract.c  test_mml_audio_remove.c  test_mml_video_concat.c  test_mml_video_cut.c  test_mml_video_images.c  test_mml_video_info.c  test_mml_video_pad.c  test_mml_video_resize.c
